--- a/bright_data_api (1).ipynb
+++ b/bright_data_api (1).ipynb
@@ -46,32 +46,32 @@
         "if response.status_code == 200:\n",
         "    soup = BeautifulSoup(response.text, \"html.parser\")\n",
         "\n",
-        "    # ✅ Extract Title\n",
+        "    
         "    title_tag = soup.find(\"h1\")\n",
         "    title = title_tag.get_text(strip=True) if title_tag else \"Title not found\"\n",
         "\n",
-        "    # ✅ Extract Price using Amazon-specific class\n",
+        "    
         "    price_tag = soup.find(\"span\", class_=\"a-price-whole\")\n",
         "    price = price_tag.get_text(strip=True) if price_tag else \"Price not found\"\n",
         "\n",
-        "    # ✅ Extract first 10 JPG image URLs\n",
+        "    
         "    jpg_images = []\n",
         "    for img in soup.find_all(\"img\"):\n",
         "        src = img.get(\"src\")\n",
         "        if src and \".jpg\" in src.lower():\n",
         "            if src.startswith(\"//\"):\n",
         "                src = \"https:\" + src\n",
-        "            # ✅ Upgrade to high-resolution\n",
+        "            
         "            high_res_src = re.sub(r'\\._[A-Z0-9,_]+\\_', '', src)  # Removes size tags\n",
         "            jpg_images.append(high_res_src)\n",
-        "    # ✅ Output\n",
+        "    
         "    print(\"Title:\", title)\n",
         "    print(\"Price:\", price)\n",
         "    print(\"High-Res Images:\", jpg_images[:10])\n",
         "\n",
         "\n",
         "else:\n",
-        "    print(\"❌ Failed\")\n",
+        "    print(\"Failed\")\n",
         "    print(\"Code:\", response.status_code)\n",
         "    print(\"Response:\", response.text)\n"
       ]
